# yinyuan

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  agent.md  spectrum-vixen-banshee.md  使用手册.md  加密验证方案.md  多Agent前端协作开发方案.md  当前实现说明.md  数据库设计与迁移方案-v1.md  文档导航-v1.md  统一认证与双Web端需求规格-v1.md  统一认证中心攻击路径演练与验收清单-v1.md  配置与密钥管理规范-v1.md  错误码与异常语义规范-v1.md  需求2.txt  需求v1.md
auth-service/: Cargo.toml  README.md
auth-service/src/: lib.rs  main.rs
auth-service/src/api/: mod.rs
auth-service/src/application/: mod.rs
auth-service/src/audit/: mod.rs
auth-service/src/domain/: mod.rs
auth-service/src/infra/: mod.rs
y2m-rs/: .gitignore  Cargo.toml  alice-e2e.json  alice.json  bob-e2e.json  bob.json
y2m-rs/bob-downloads/: 1.txt
y2m-rs/crates/client-core/: Cargo.toml
y2m-rs/crates/client-core/src/: command_bus.rs  config.rs  connection.rs  core.rs  error.rs  lib.rs  plugin.rs  protocol.rs  sender_envelope.rs  session.rs
y2m-rs/crates/common/: Cargo.toml
y2m-rs/crates/common/src/: lib.rs
y2m-rs/crates/server/: Cargo.toml
y2m-rs/crates/server/src/: error.rs  init.rs  lib.rs  main.rs  protocol.rs  router.rs  session.rs  transfer.rs  ws.rs
y2m-rs/docs/: quickstart.md
y2m-rs/src/: cli.rs  cmd_chat.rs  cmd_init.rs  cmd_run.rs  cmd_send.rs  file_flow.rs  file_store.rs  line_editor.rs  main.rs  plugin.rs  printer.rs  types.rs  util.rs
y2m-rs/src/state/: command.rs  command_results.rs  file_handling.rs  mod.rs  outgoing.rs
y2m-rs/target-reconnect-consistency-all/debug/: liby2m_client_core.d  liby2m_common.d  liby2m_server.d  y2m-server.d  y2m.d
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anstyle-e151762c56b9cbda/: lib-anstyle  lib-anstyle.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anstyle-query-f0837c03cd55c51b/: lib-anstyle_query.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anstyle-wincon-3ea94df3b9a9046f/: lib-anstyle_wincon.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anyhow-2c922ea46d46ed2a/: run-build-script-build-script-build.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anyhow-54bb4ed48c95cbe6/: lib-anyhow  lib-anyhow.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/anyhow-807c6fc669f53ba5/: build-script-build-script-build  build-script-build-script-build.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/async-trait-be9cf377f1b7456d/: lib-async_trait.json
y2m-rs/target-reconnect-consistency-all/debug/.fingerprint/clap-951074cb71b91efc/: lib-clap  (+1 more)
y2m-rs/tests/: cli_file_basic_e2e.rs  cli_file_chunk_errors_e2e.rs  cli_file_integrity_e2e.rs  cli_process_e2e.rs  cli_reconnect_e2e.rs  command_e2e.rs  file_transfer_errors_v3.rs  file_transfer_v3.rs  heartbeat_timeout.rs  json_e2e.rs  text_e2e.rs
y2m-rs/tests/support/: cli.rs  mod.rs
(+209 files in other folders)
