[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.10", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
